# parp

./: .gitignore  README.md  doc.md  flake.nix
haskell/: README.md  choroszcz-escape-hs.cabal
haskell/app/: Main.hs
haskell/src/: Actions.hs  Gameplay.hs  Items.hs  Locations.hs  State.hs
prolog/: README.md  adventure.pl  run.sh
prolog/rooms/: padded_cell.pl  reception.pl
prolog/source/: actions.pl  consts.pl  gameplay.pl  items.pl  locations.pl
